fix(all): improve dark mode colors

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -6,11 +6,7 @@ html {
   --color-secondary: #efc3ef;
   --color-accent: #c832c8;
   --color-hover: #e0e4e1;
-  --graph-color: #666666;
-
-  /* Material Design stuff */
-  --mdc-theme-primary: #c832c8;
-  --mdc-theme-secondary: #efc3ef;
+  --graph-color: #54545477;
 }
 
 html.theme-dark {
@@ -21,7 +17,7 @@ html.theme-dark {
   --color-secondary: #efc3ef;
   --color-accent: #c832c8;
   --color-hover: #474747;
-  --graph-color: #afafaf;
+  --graph-color: #cdcdcdb1;
 }
 
 body {
